--- a/FE/src/index.scss
+++ b/FE/src/index.scss
@@ -92,3 +92,25 @@ $carousel-transition:                transform $carousel-transition-duration eas
 	font-size: 24px;
 	font-weight: 700;
 }
+
+.row{
+	margin-top: 20px;
+	border: 1px solid black;
+	border-radius: 20px;
+	img{
+		border-radius: 50px 50px;
+		padding-top: -10px;
+		
+	}
+	
+}
+.dropdown-btn {
+  /* Add your dropdown button styles here */
+}
+
+.dropdown-btn:focus + #dropdown-menu,
+.dropdown-btn:hover + #dropdown-menu,
+#dropdown-menu:focus-within,
+#dropdown-menu:hover {
+  display: block;
+}
